<resources>
    <string name="app_name">Guide to Haarlem</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="access_token">pk.eyJ1IjoidG9ueXF1aWNrODgiLCJhIjoiY2l1am5wOW15MDAwZzJvdDRtc2hnbXB5ZyJ9.x2-8NLAu0Vb6NUFO8jd-Vw</string>
    <string name="map_style">mapbox://styles/tonyquick88/ciujrgx2w009i2jmlncmu4b24</string>


    <string name="descriptor_price">Price</string>
    <string name="descriptor_price_per_person">(average per person)</string>
    <string name="descriptor_vibe">Vibe</string>
    <string name="descriptor_style">Style</string>
    <string name="descriptor_cuisine">Cuisine Type</string>
    <string name="descriptor_order_suggestions">Order Suggestions</string>
    <string name="descriptor_speciality">Speciality</string>
    <string name="descriptor_suggestions">Suggestions</string>
    <string name="descriptor_time">Time Required</string>
    <string name="descriptor_tickets">Where to buy tickets</string>
    <string name="descriptor_distance">Distance from you</string>
    <string name="descriptor_description">Description</string>

    <string name="order_by">Order by:</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="distance_from">Distance away</string>
    <string name="on_map_button">View on Map</string>
    <string name="cuisine">Cuisine:</string>
    <string name="vibe">Style:</string>
    <string name="subject">Subject:</string>
    <string name="type">Type:</string>
    <string name="unknown_distance">Unknown</string>
    <string name="refresh">Refresh</string>

    <string name="card_description">Description</string>
    <string name="card_price_range">Average Price (per person)</string>
    <string name="card_cuisine">Cuisine</string>
    <string name="card_vibe">Vibe</string>
    <string name="card_type">Type</string>
    <string name="card_speciality">Speciality</string>
    <string name="card_suggestions">Suggestions</string>
    <string name="card_time_required">Time Required</string>
    <string name="card_where_tickets">Where to get tickets</string>
    <string name="card_subject">Picture Subject</string>
    <string name="card_eat_type">Eatery Type</string>


    <string name="directions">Directions</string>
    <string name="edit_existing_attraction">Edit existing attraction</string>
    <string name="create_new_attraction">Create new attraction</string>
    <string name="attraction_instructions">Enter attraction title and location manually or use search bar to find details through Google</string>
    <string name="attraction_editor_title_edit">Edit Attraction</string>
    <string name="attraction_editor_title_suggestion">Make suggestion</string>
    <string name="menu_type_restaurant">Restaurant</string>
    <string name="menu_item_bar">Bar</string>
    <string name="menu_item_coffee_shop">Coffee Shop</string>
    <string name="menu_item_cafe">Cafe</string>
    <string name="menu_item_thing_to_do">Thing To Do</string>
    <string name="menu_item_photo_op">Photo Opportunity</string>
    <string name="attraction_edit_selector_title">Select Attraction</string>
    <string name="attraction_no_types_set">No types to display</string>
    <string name="card_order_suggestions">Order Suggestions</string>


    <string name="password_prompt">Password</string>
    <string name="username_prompt">Email</string>


    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="name">Name*</string>
    <string name="attraction_editor_search_google">Search for attraction</string>
    <string name="attraction_editor_title_create">Create attraction</string>
    <string name="attraction_editor_location">Location*</string>
    <string name="attraction_editor_map_button">Find on Map</string>
    <string name="attraction_editor_coords">Coordinates</string>
    <string name="attraction_editor_description">Description*</string>
    <string name="attraction_editor_description_prompt">Enter attraction description</string>
    <string name="attraction_editor_image">Image</string>
    <string name="attraction_editor_image_button">Add Image</string>
    <string name="attraction_editor_type_selection_title">Select attraction types:</string>
    <string name="attraction_editor_submit_button">Submit</string>
    <string name="attraction_editor_delete_button">Delete Suggestion</string>
    <string name="verify_suggestion">Verify Suggestion</string>
    <string name="map_directions_to">"Directions to: "</string>

    <string name="getting_around_title"><b>Getting Around</b></string>
    <string name="getting_around_initial_description">Exploring the Netherlands is very simple; it\'s a very small country and features one of the most robust public transport networks in the world and is also incredibly bicycle friendly.</string>
    <string name="getting_around_public_transport_title">Public Transport</string>
    <string name="getting_around_public_transport">The Public transport network in the Netherlands is extensive featuring trains as the primary intercity travel links, with buses and trams providing most intracity travel. For most tourists the network starts at Schipol airport, there are both bus and train links to a number of surrounding cities.</string>
    <string name="getting_around_9292_app">To help find your way around, we strongly recommend the 9292 route planner app. Given 2 locations, the app will suggest routes between them that utilise the full transport network to find the quickest routes.</string>
    <string name="getting_around_9292_link"><u>Click here for more information.</u></string>
    <string name="getting_around_intracity_title">Local Travel</string>
    <string name="getting_around_intracity">There are a number of options for travelling within cities. The bus, metro and tram network is operated GVB and so a OV-chipcard can be purchased and used on all transport links for long stays. Single use tickets are also available, these can be purchased for hour long or daily periods. Visitors should also note that often payment via Visa cards isn\'t possible, so carrying cash is recommended.</string>
    <string name="getting_around_cycling_title">Cycling</string>
    <string name="getting_around_cycling">The Netherlands is also very bicycle friendly with cycle lanes on almost all roads.</string>
    <string name="getting_around_hyperlink_bike_rental"><a href="http://www.holland-cycling.com/tips-and-info/services/bicycle-rental">There are a number of bike rental options, more information can be found here.</a></string>

    <string name="title_activity_album">AlbumActivity</string>
    <string name="image_enter_title">Enter Title</string>
    <string name="add_image">Select Image to Upload</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
