<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tonyquick.thequicklawsonguidetohaarlem.fragments.GettingAroundFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/getting_around_title"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/getting_around_initial_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/getting_around_public_transport_title"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_around_public_transport"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_9292"
                android:layout_weight="3"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/getting_around_9292_app"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/getting_around_9292_link"
                    android:id="@+id/link_9292_textview"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/hyperlink"/>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_around_intracity_title"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/getting_around_intracity"
            android:gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/amsterdam_bike"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:text="@string/getting_around_cycling_title"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/getting_around_cycling"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_around_hyperlink_bike_rental"
            android:gravity="center"
            android:id="@+id/bike_hyperlink_textview"
            android:layout_marginBottom="10dp"
            android:textColorLink="@color/hyperlink"/>






    </LinearLayout>

</ScrollView>
